--- a/app/src/main/res/menu/my_stocks.xml
+++ b/app/src/main/res/menu/my_stocks.xml
@@ -6,7 +6,7 @@
         android:id="@+id/refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="98"
-        android:title="@string/action_change_units"
+        android:title="@string/action_refresh"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_change_units"
