--- a/app/src/main/res/layout/activity_my_stocks.xml
+++ b/app/src/main/res/layout/activity_my_stocks.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,11 +16,11 @@
         android:layout_margin="16dp"
         android:contentDescription="@string/fab_add"
         android:src="@drawable/ic_add_white_24dp"
-        fab:fab_colorNormal="@color/material_blue_500"
-        fab:fab_colorPressed="@color/material_blue_600"
-        fab:fab_colorRipple="@color/ripple"
-        fab:fab_shadow="true"
-        fab:fab_type="normal"
-        fab:layout_anchor="recycler_view"
-        fab:layout_anchorGravity="bottom | end" />
+        tools:fab_colorNormal="@color/material_blue_500"
+        tools:fab_colorPressed="@color/material_blue_600"
+        tools:fab_colorRipple="@color/ripple"
+        tools:fab_shadow="true"
+        tools:fab_type="normal"
+        tools:layout_anchor="recycler_view"
+        tools:layout_anchorGravity="bottom | end" />
 </FrameLayout>
