--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -8,9 +8,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/material_blue_700"
+        android:background="@color/material_blue_500"
         android:padding="8dp"
         android:text="Stock Market"
+        android:textAppearance="@style/PercentChangeTextStyle"
         android:textSize="16sp" />
 
     <ListView
